# SteinerTraversalInitialization

./: CMakeLists.txt  LICENSE  README.md
include/sti/: approximate_minimum_steiner_tree.h  face_center.h  generate_initial_curve.h  place_terminals.h  right_hand_traversal.h  union_find.h
src/: sample.cpp
